--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="shoe-details">
       <span class="shoe_name">ADDIDAS GAZE ZX</span>
-      <p>This is my brand</p>
+      <p>ADDIDAS ORIGINAL</p>
       <div class="stars">
         <i class='bx bxs-star' ></i>
         <i class='bx bxs-star' ></i>
