--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<body>
+<body onload="startTime()">
   <div class="product-card">
     <div class="logo-cart">
      
@@ -50,6 +50,8 @@
       <button>Add To Cart</button>
     </div>
   </div>
+  <h2>clock</h2>
+  <div id="txt"></div>
   <script>
    let circle = document.querySelector(".color-option");
 
@@ -62,6 +64,22 @@
        document.querySelector(`.main-images .${target.id}`).classList.add("active");
      }
    });
+    // adding clock for limited time deal
+    function startTime() {
+  const today = new Date();
+  let h = today.getHours();
+  let m = today.getMinutes();
+  let s = today.getSeconds();
+  m = checkTime(m);
+  s = checkTime(s);
+  document.getElementById('txt').innerHTML =  h + ":" + m + ":" + s;
+  setTimeout(startTime, 1000);
+}
+
+function checkTime(i) {
+  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+  return i;
+}
   </script>
 </body>
 </html>
